deploy/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ganesha
  labels:
    app.kubernetes.io/part-of: ganesha
