deploy/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ganesha
spec:
  selector:
    app.kubernetes.io/name: ganesha
  ports:
    - name: http
      port: 80
      targetPort: http
